--- a/oauth2-provider/src/main/resources/application.properties
+++ b/oauth2-provider/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.thymeleaf.cache: false
 security.basic.enabled: false
 # demo only:
 security.user.password: password
-logging.level.org.springframework.security: INFO
+logging.level.org.springframework.security: DEBUG
